--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,31 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+ <nav class="navbar navbar-light sticky-top navbar-expand-lg mb-4" style="background-color: #fbc700;">
   <a class="navbar-brand" href="/">MyBlog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'blog:index' %}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+        <a class="nav-link " href="/about/">about me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link disabled" href="{% url 'blog:contact_form' %}">contact</a>
       </li>
+      <link href="css/social-buttons.css" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+          <a href="#" class="nav-item nav-link"><i class="fa fa-facebook"></i></a>
+          <a href="#" class="nav-item nav-link"><i class="fa fa-twitter"></i></a>
+          <a href="#" class="nav-item nav-link"><i class="fa fa-github"></i></a>
     </ul>
     {% include "blog/snippets/search_form.html" %}
   </div>
