--- a/templates/flatpages/top.html
+++ b/templates/flatpages/top.html
@@ -159,7 +159,7 @@
       <div class="container">
 
         <div class="left_space">
-          <img src="image/yuki-profile2.jpg" class="profile_image" alt="長岡 勇輝（ながおか ゆうき）">
+          <img src="image/yuki-profile2.jpg" class="profile_image" alt="">
           <div class="sns">
             <ul class="text_center">
               <li><a href="https://twitter.com/freepc_yuki" class="twitter" target="_blank">Twitter</a></li>
@@ -178,9 +178,8 @@
             <div class="info">
               <h3 class="top_info">パーソナル情報</h3>
               <p>　
-                ""
-                hidemaru11が修正<br>
-                1987年05月12日生まれ / 32歳
+                <br>
+                1988年05月12日生まれ / 32歳
               </p>
             </div>
           </section>
@@ -256,7 +255,7 @@
             <div id="future" class="info">
               <h3 class="top_info">どの様なエンジニアになりたいか</h3>
               <p>
-                親族が経営する会社を辞めてまでIT企業を志した理由は、<br>
+                IT企業を志した理由は、<br>
                 <span class="red-bold">「大きな変化による価値を生み出し、多くの人の役に立ちたい」</span>からです。
               </p>
               <section>
