--- a/blog/templates/blog/snippets/main_post_list.html
+++ b/blog/templates/blog/snippets/main_post_list.html
@@ -4,8 +4,7 @@
 <div class="card mb-3">
   {% if post.image %}
   <a href="{% url 'blog:post_detail' post.id %}">
-    <img class="card-img-top" src="{{ post.image.url }}" alt="{{ post.title }}">
-  </a>
+    <img class="card-img-top" src="{{ post.image.url }}" alt="{{ post.title }}"　>
   {% endif %}
   <div class="card-body">
     {% if not post.is_public %}
@@ -15,7 +14,7 @@
       <h5 class="card-title">{{ post.title }}</h5>
     </a>
     <p class="card-text">{{ post.published_at|date }}</p>
-    <a href="{% url 'blog:post_detail' post.id %}" class="btn btn-primary">記事を読む</a>
+    <a href="{% url 'blog:post_detail' post.id %}" class="btn btn-primary" align="center"/>記事を読む</a>
   </div>
 </div>
 
