--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,4 +1,5 @@
  <nav class="navbar navbar-light sticky-top navbar-expand-lg mb-4" style="background-color: #fbc700;">
+  <link rel="stylesheet" href="navber.css" type="text/css">
   <a class="navbar-brand" href="/">MyBlog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
