--- a/templates/flatpages/about.html
+++ b/templates/flatpages/about.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>room_no34_prof></title>
+<title>></title>
 <head>
 <body background="roadweb_kabe1.gif" text="black"  link="tomato" vlink="red" alink="hotpink">
 <h1 align="center">About me</h1>
@@ -11,25 +11,24 @@
     </p>
 <h2>コメント</h2>
     <p>
-    全力に真面目に、全力に不真面目に生きております。人生楽しくがモットーです。
+    全力に真面目に、人生楽しくがモットーです。
     </p>
 <h2>base_data</h2>
     <p>
-    誕生日: 1988.10.10<br>
     出身地：愛知県<br>
     性別: 男<br>
-    趣味: スノボ（グラトリ専門）、バスケ<br>
-    特技: ビートボックス、フリースタイルバスケットボール<br>
+    趣味: 読書、音楽観賞<br>
+    特技: ギター弾き語り<br>
     </p>
 
 <h2>work</h2>
 <p>
-今の仕事: teratailの広報<br>
-できること: 広報、営業、プロモーション企画/ディレクデョン、プログラミング（少々）<br>
-職歴: エンジニア業界の営業（約2年）、teratail広報（約10ヶ月）
+今の仕事: ドラッグストアの店員<br>
+勉強中: Webライティング、プログラミング（少々）、TOEIC<br>
+職歴:小売、接客業（３年）
 </p>
 <br><br><br><br><br>
-<a href="index.html">[ホーム]</a>[facebook][twitter][github]
+<a href="{% url 'blog:index' %}">[ホーム]</a>
 </center>
 </body>
 </html>
